Header template styling, image placement and html for buttons etc; one thing to fix: overflow on home-image-header from transparent-overlay

--- a/public_html/css/hamburger-nav.css
+++ b/public_html/css/hamburger-nav.css
@@ -56,12 +56,13 @@ nav .link-container {
 nav .link-container a {
     color: #646464;
     text-decoration: none;
-    font-weight: 800;
+    font-weight: 500;
     border-bottom-style: solid;
     border-bottom-width: 0.1rem;
     border-bottom-color: transparent;
     transition: color 0.4s, border-bottom-color 0.4s;
     margin-left: 0.7rem;
+    font-size: 1.2em;
 }
 
 nav .link-container a:focus, nav .link-container a:hover {
@@ -77,7 +78,6 @@ nav .link-container a.selected {
     color: #F29F4E;
     border-bottom-style: solid;
     border-bottom-width: 0.1rem;
-    font-style: italic;
 }
 
 body.menu-open header nav {
